--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,7 @@
-## Core latex/pdflatex auxiliary files:
-*.aux
-*.lof
-*.log
-*.lot
-*.fls
-*.out
-*.toc
-*.fmt
-*.fot
-*.cb
-*.cb2
-
-## Intermediate documents:
-*.dvi
-*-converted-to.*
-# these rules might exclude image files for figures etc.
-# *.ps
-# *.eps
-# *.pdf
-
-## Generated if empty string is given at "Please type another file name for output:"
-.pdf
-
-# LaTeX output files
-*.aux
-*.log
-*.pdf
+# Ignore everything
+/*
+# Un-ignore specific files
+!/README.md
+!/.gitignore
+!/*.tex
+!/*.png
